// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/ComboboxInput Compact 1`] = `
<div
  className="fd-form-item"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-owns="compactComboboxExample-listbox-list"
          id="compactComboboxExample-combobox"
          role="combobox"
        >
          <div
            className="fd-popover"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  className="fd-input-group--control fd-input-group"
                  onClick={[Function]}
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="compactComboboxExample-listbox-list"
                    aria-label="Compact"
                    autoComplete="off"
                    className="fd-input fd-input--compact fd-input-group__input"
                    id="compactComboboxExample-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Enter country"
                    type="text"
                  />
                  <span
                    className="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
                  >
                    <button
                      className="fd-button fd-button--transparent fd-button--compact fd-input-group__button"
                      id="compactComboboxExample-combobox-arrow"
                      onClick={[Function]}
                      tabIndex="-1"
                      type="button"
                    >
                      <i
                        aria-hidden={true}
                        className="sap-icon--navigation-down-arrow"
                        role="img"
                      />
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Dev 1`] = `
<div
  className="fd-container"
>
  <div
    className="fd-row"
  >
    <div
      className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
    >
      <div>
        <button
          className="fd-button"
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Dummy
          </span>
        </button>
      </div>
    </div>
    <div
      className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
    >
      <div>
        <label
          className="fd-form-label"
          onKeyDown={[Function]}
        >
          Use custom option renderer
        </label>
        <label
          className="fd-switch"
        >
          <span
            className="fd-switch__control fd-switch--compact"
          >
            <input
              aria-checked={false}
              aria-label="Switch"
              checked={false}
              className="fd-switch__input"
              onChange={[Function]}
              type="checkbox"
            />
            <div
              className="fd-switch__slider"
            >
              <div
                className="fd-switch__track"
              >
                <span
                  className="fd-switch__handle"
                  role="presentation"
                />
              </div>
            </div>
          </span>
        </label>
        Selected country code: 
        none
        <br />
        <div
          className="fd-form-group"
        >
          <div
            className="fd-form-item fd-form-item--horizontal"
          >
            <label
              className="fd-form-label"
              htmlFor="comboboxDevExample"
            >
              Country
            </label>
            <br />
            <div
              className="fd-form-item"
            >
              <div
                className="fd-popover"
              >
                <div
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    className="fd-popover__control"
                  >
                    <div
                      aria-expanded={false}
                      aria-haspopup="listbox"
                      aria-owns="comboboxDevExample-listbox-list"
                      id="comboboxDevExample-combobox"
                      role="combobox"
                    >
                      <div
                        className="fd-popover"
                        onBlur={[Function]}
                        onFocus={[Function]}
                      >
                        <div
                          onFocus={[Function]}
                          onMouseDown={[Function]}
                          onTouchStart={[Function]}
                        >
                          <div
                            className="fd-popover__control"
                          >
                            <div
                              className="fd-input-group--control fd-input-group"
                              onClick={[Function]}
                            >
                              <input
                                aria-autocomplete="list"
                                aria-controls="comboboxDevExample-listbox-list"
                                autoComplete="off"
                                className="fd-input fd-input-group__input"
                                disabled={false}
                                id="comboboxDevExample-input"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onKeyDown={[Function]}
                                placeholder="Enter country"
                                required={false}
                                type="text"
                              />
                              <span
                                className="fd-input-group__addon fd-input-group__addon--button"
                                disabled={false}
                              >
                                <button
                                  aria-label="Show country options"
                                  className="fd-button fd-button--transparent fd-input-group__button"
                                  data-sample="combobox-dev-story-example"
                                  id="comboboxDevExample-combobox-arrow"
                                  onClick={[Function]}
                                  tabIndex="-1"
                                  type="button"
                                >
                                  <i
                                    aria-hidden={true}
                                    className="sap-icon--navigation-down-arrow"
                                    role="img"
                                  />
                                </button>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              className="fd-button"
              onClick={[Function]}
              type="button"
            >
              <span
                className="fd-button__text"
              >
                Clear
              </span>
              <i
                aria-hidden={true}
                className="sap-icon--decline"
                role="img"
              />
            </button>
          </div>
        </div>
        <div
          className="fd-container"
        />
      </div>
    </div>
    <div
      className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
    >
      <div>
        <button
          className="fd-button"
          type="button"
        >
          <span
            className="fd-button__text"
          >
            Dummy
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Disabled 1`] = `
<div
  className="fd-form-item"
>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-owns="disabledComboboxExample-listbox-list"
          id="disabledComboboxExample-combobox"
          role="combobox"
        >
          <div
            className="fd-popover"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  className="fd-input-group--control is-disabled fd-input-group is-disabled"
                  onClick={[Function]}
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="disabledComboboxExample-listbox-list"
                    aria-label="Disabled"
                    autoComplete="off"
                    className="fd-input fd-input-group__input"
                    disabled={true}
                    id="disabledComboboxExample-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Enter country"
                    type="text"
                  />
                  <span
                    className="fd-input-group__addon fd-input-group__addon--button"
                    disabled={true}
                  >
                    <button
                      className="fd-button fd-button--transparent fd-input-group__button"
                      id="disabledComboboxExample-combobox-arrow"
                      onClick={[Function]}
                      tabIndex="-1"
                      type="button"
                    >
                      <i
                        aria-hidden={true}
                        className="sap-icon--navigation-down-arrow"
                        role="img"
                      />
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Freetype 1`] = `
Array [
  <div
    className="fd-container"
  >
    <div
      className="fd-row"
    >
      <div
        className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
      >
        <div
          className="fd-form-item"
        >
          <label
            className="fd-form-label"
            id="freetypeComboboxExample-label"
          >
            Freetype Combobox
          </label>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="freetypeComboboxExample-listbox-list"
                  id="freetypeComboboxExample-combobox"
                  role="combobox"
                >
                  <div
                    className="fd-popover"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    <div
                      onFocus={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                    >
                      <div
                        className="fd-popover__control"
                      >
                        <div
                          className="fd-input-group--control fd-input-group"
                          onClick={[Function]}
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="freetypeComboboxExample-listbox-list"
                            aria-labelledby="freetypeComboboxExample-label"
                            autoComplete="nope"
                            className="fd-input fd-input-group__input"
                            id="freetypeComboboxExample-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            placeholder="Enter country"
                            type="text"
                          />
                          <span
                            className="fd-input-group__addon fd-input-group__addon--button"
                          >
                            <button
                              aria-label="Show country options"
                              className="fd-button fd-button--transparent fd-input-group__button"
                              id="freetypeComboboxExample-combobox-arrow"
                              onClick={[Function]}
                              tabIndex="-1"
                              type="button"
                            >
                              <i
                                aria-hidden={true}
                                className="sap-icon--navigation-down-arrow"
                                role="img"
                              />
                            </button>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
      />
      <div
        className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
      />
    </div>
  </div>,
  <p>
    text:
     
    <input
      onChange={[Function]}
      value=""
    />
  </p>,
  <p>
    key:
     
    <input
      onChange={[Function]}
      value=""
    />
  </p>,
]
`;

exports[`Storyshots Component API/ComboboxInput No Styles 1`] = `
<div
  className="xxx-form-item"
>
  <label
    className="xxx-form-label"
    id="primaryComboboxExample-label"
  >
    Default
  </label>
  <div
    className="xxx-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="xxx-popover__control"
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-owns="primaryComboboxExample-listbox-list"
          id="primaryComboboxExample-combobox"
          role="combobox"
        >
          <div
            className="xxx-popover"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="xxx-popover__control"
              >
                <div
                  className="xxx-input-group--control xxx-input-group"
                  onClick={[Function]}
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="primaryComboboxExample-listbox-list"
                    aria-labelledby="primaryComboboxExample-label"
                    autoComplete="off"
                    className="xxx-input xxx-input-group__input"
                    id="primaryComboboxExample-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Enter country"
                    type="text"
                  />
                  <span
                    className="xxx-input-group__addon xxx-input-group__addon--button"
                  >
                    <button
                      className="xxx-button xxx-button--transparent xxx-input-group__button"
                      id="primaryComboboxExample-combobox-arrow"
                      onClick={[Function]}
                      tabIndex="-1"
                      type="button"
                    >
                      <i
                        aria-hidden={true}
                        className="sap-icon--navigation-down-arrow"
                        role="img"
                      />
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Pre Selected Key 1`] = `
<div
  className="fd-container"
>
  <div
    className="fd-row"
  >
    <div
      className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
    >
      <div
        className="fd-form-item"
      >
        <label
          className="fd-form-label"
          id="preSelectedKeyComboboxExample-label"
        >
          Pre Selected Combobox
        </label>
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="preSelectedKeyComboboxExample-listbox-list"
                id="preSelectedKeyComboboxExample-combobox"
                role="combobox"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        className="fd-input-group--control fd-input-group"
                        onClick={[Function]}
                      >
                        <input
                          aria-autocomplete="both"
                          aria-controls="preSelectedKeyComboboxExample-listbox-list"
                          aria-labelledby="preSelectedKeyComboboxExample-label"
                          autoComplete="nope"
                          className="fd-input fd-input-group__input"
                          id="preSelectedKeyComboboxExample-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Enter country"
                          type="text"
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            aria-label="Show country options"
                            className="fd-button fd-button--transparent fd-input-group__button"
                            id="preSelectedKeyComboboxExample-combobox-arrow"
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--navigation-down-arrow"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <small>
        Clear the field to see more options
      </small>
    </div>
    <div
      className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
    />
    <div
      className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Primary 1`] = `
<div
  className="fd-form-item"
>
  <label
    className="fd-form-label"
    id="primaryComboboxExample-label"
  >
    Default
  </label>
  <div
    className="fd-popover"
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <div
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-owns="primaryComboboxExample-listbox-list"
          id="primaryComboboxExample-combobox"
          role="combobox"
        >
          <div
            className="fd-popover"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  className="fd-input-group--control fd-input-group"
                  onClick={[Function]}
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="primaryComboboxExample-listbox-list"
                    aria-labelledby="primaryComboboxExample-label"
                    autoComplete="off"
                    className="fd-input fd-input-group__input"
                    id="primaryComboboxExample-input"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onKeyDown={[Function]}
                    placeholder="Enter country"
                    type="text"
                  />
                  <span
                    className="fd-input-group__addon fd-input-group__addon--button"
                  >
                    <button
                      className="fd-button fd-button--transparent fd-input-group__button"
                      id="primaryComboboxExample-combobox-arrow"
                      onClick={[Function]}
                      tabIndex="-1"
                      type="button"
                    >
                      <i
                        aria-hidden={true}
                        className="sap-icon--navigation-down-arrow"
                        role="img"
                      />
                    </button>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Search Full String 1`] = `
<div
  className="fd-container"
>
  <div
    className="fd-row"
  >
    <div
      className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
    >
      <div
        className="fd-form-item"
      >
        <label
          className="fd-form-label"
          id="searchBeginningStringComboboxExample-label"
        >
          Search by the beginning of the string Combobox (Default)
        </label>
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="searchBeginningStringComboboxExample-listbox-list"
                id="searchBeginningStringComboboxExample-combobox"
                role="combobox"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        className="fd-input-group--control fd-input-group"
                        onClick={[Function]}
                      >
                        <input
                          aria-autocomplete="both"
                          aria-controls="searchBeginningStringComboboxExample-listbox-list"
                          aria-labelledby="searchBeginningStringComboboxExample-label"
                          autoComplete="nope"
                          className="fd-input fd-input-group__input"
                          id="searchBeginningStringComboboxExample-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Enter country"
                          type="text"
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            aria-label="Show country options"
                            className="fd-button fd-button--transparent fd-input-group__button"
                            id="searchBeginningStringComboboxExample-combobox-arrow"
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--navigation-down-arrow"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
    >
      <div
        className="fd-form-item"
      >
        <label
          className="fd-form-label"
          id="searchFullStringComboboxExample-label"
        >
          Search by the full string Combobox
        </label>
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="searchFullStringComboboxExample-listbox-list"
                id="searchFullStringComboboxExample-combobox"
                role="combobox"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        className="fd-input-group--control fd-input-group"
                        onClick={[Function]}
                      >
                        <input
                          aria-autocomplete="both"
                          aria-controls="searchFullStringComboboxExample-listbox-list"
                          aria-labelledby="searchFullStringComboboxExample-label"
                          autoComplete="nope"
                          className="fd-input fd-input-group__input"
                          id="searchFullStringComboboxExample-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Enter country"
                          type="text"
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            aria-label="Show country options"
                            className="fd-button fd-button--transparent fd-input-group__button"
                            id="searchFullStringComboboxExample-combobox-arrow"
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--navigation-down-arrow"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
    />
    <div
      className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Selection Type 1`] = `
<div
  className="fd-container"
>
  <div
    className="fd-row"
  >
    <div
      className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
    >
      <div>
        Selected country code: 
        none
        <br />
        <div
          className="fd-form-item"
        >
          <label
            className="fd-form-label"
            id="comboboxManualSelectExample-label"
          >
            Country (Manual Select)
          </label>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="comboboxManualSelectExample-listbox-list"
                  id="comboboxManualSelectExample-combobox"
                  role="combobox"
                >
                  <div
                    className="fd-popover"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    <div
                      onFocus={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                    >
                      <div
                        className="fd-popover__control"
                      >
                        <div
                          className="fd-input-group--control fd-input-group"
                          onClick={[Function]}
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="comboboxManualSelectExample-listbox-list"
                            aria-labelledby="comboboxManualSelectExample-label"
                            autoComplete="nope"
                            className="fd-input fd-input-group__input"
                            id="comboboxManualSelectExample-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            placeholder="🔎   Enter Country Name"
                            type="text"
                          />
                          <span
                            className="fd-input-group__addon fd-input-group__addon--button"
                          >
                            <button
                              aria-label="Show country options"
                              className="fd-button fd-button--transparent fd-input-group__button"
                              id="comboboxManualSelectExample-combobox-arrow"
                              onClick={[Function]}
                              tabIndex="-1"
                              type="button"
                            >
                              <i
                                aria-hidden={true}
                                className="sap-icon--navigation-down-arrow"
                                role="img"
                              />
                            </button>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
    >
      <div>
        Selected country code: 
        none
        <br />
        <div
          className="fd-form-item"
        >
          <label
            className="fd-form-label"
            id="comboboxAutoSelectExample-label"
          >
            Country (Auto Select)
          </label>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="comboboxAutoSelectExample-listbox-list"
                  id="comboboxAutoSelectExample-combobox"
                  role="combobox"
                >
                  <div
                    className="fd-popover"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    <div
                      onFocus={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                    >
                      <div
                        className="fd-popover__control"
                      >
                        <div
                          className="fd-input-group--control fd-input-group"
                          onClick={[Function]}
                        >
                          <input
                            aria-autocomplete="list"
                            aria-controls="comboboxAutoSelectExample-listbox-list"
                            aria-labelledby="comboboxAutoSelectExample-label"
                            autoComplete="nope"
                            className="fd-input fd-input-group__input"
                            id="comboboxAutoSelectExample-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            placeholder="🔎   Enter Country Name"
                            type="text"
                          />
                          <span
                            className="fd-input-group__addon fd-input-group__addon--button"
                          >
                            <button
                              aria-label="Show country options"
                              className="fd-button fd-button--transparent fd-input-group__button"
                              id="comboboxAutoSelectExample-combobox-arrow"
                              onClick={[Function]}
                              tabIndex="-1"
                              type="button"
                            >
                              <i
                                aria-hidden={true}
                                className="sap-icon--navigation-down-arrow"
                                role="img"
                              />
                            </button>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-col fd-col--4 fd-col-md--4 fd-col-lg--4 fd-col-xl--4"
    >
      <div>
        Selected country code: 
        none
        <br />
        <div
          className="fd-form-item"
        >
          <label
            className="fd-form-label"
            id="comboboxAutoInlineSelectExample-label"
          >
            Country (Auto Select and Inline Auto Complete)
          </label>
          <div
            className="fd-popover"
          >
            <div
              onFocus={[Function]}
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="fd-popover__control"
              >
                <div
                  aria-expanded={false}
                  aria-haspopup="listbox"
                  aria-owns="comboboxAutoInlineSelectExample-listbox-list"
                  id="comboboxAutoInlineSelectExample-combobox"
                  role="combobox"
                >
                  <div
                    className="fd-popover"
                    onBlur={[Function]}
                    onFocus={[Function]}
                  >
                    <div
                      onFocus={[Function]}
                      onMouseDown={[Function]}
                      onTouchStart={[Function]}
                    >
                      <div
                        className="fd-popover__control"
                      >
                        <div
                          className="fd-input-group--control fd-input-group"
                          onClick={[Function]}
                        >
                          <input
                            aria-autocomplete="both"
                            aria-controls="comboboxAutoInlineSelectExample-listbox-list"
                            aria-labelledby="comboboxAutoInlineSelectExample-label"
                            autoComplete="nope"
                            className="fd-input fd-input-group__input"
                            id="comboboxAutoInlineSelectExample-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onKeyDown={[Function]}
                            placeholder="🔎   Enter Country Name"
                            type="text"
                          />
                          <span
                            className="fd-input-group__addon fd-input-group__addon--button"
                          >
                            <button
                              aria-label="Show country options"
                              className="fd-button fd-button--transparent fd-input-group__button"
                              id="comboboxAutoInlineSelectExample-combobox-arrow"
                              onClick={[Function]}
                              tabIndex="-1"
                              type="button"
                            >
                              <i
                                aria-hidden={true}
                                className="sap-icon--navigation-down-arrow"
                                role="img"
                              />
                            </button>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Show All Entries 1`] = `
<div
  className="fd-container"
>
  <div
    className="fd-row"
  >
    <div
      className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
    >
      <div
        className="fd-form-item"
      >
        <label
          className="fd-form-label"
          id="showOnlyMatchingEntriesComboboxExample-label"
        >
          Show only matching entries Combobox (Default)
        </label>
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="showOnlyMatchingEntriesComboboxExample-listbox-list"
                id="showOnlyMatchingEntriesComboboxExample-combobox"
                role="combobox"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        className="fd-input-group--control fd-input-group"
                        onClick={[Function]}
                      >
                        <input
                          aria-autocomplete="both"
                          aria-controls="showOnlyMatchingEntriesComboboxExample-listbox-list"
                          aria-labelledby="showOnlyMatchingEntriesComboboxExample-label"
                          autoComplete="nope"
                          className="fd-input fd-input-group__input"
                          id="showOnlyMatchingEntriesComboboxExample-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Enter country"
                          type="text"
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            aria-label="Show country options"
                            className="fd-button fd-button--transparent fd-input-group__button"
                            id="showOnlyMatchingEntriesComboboxExample-combobox-arrow"
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--navigation-down-arrow"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
    >
      <div
        className="fd-form-item"
      >
        <label
          className="fd-form-label"
          id="showAllEntriesComboboxExample-label"
        >
          Show all entries Combobox
        </label>
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="showAllEntriesComboboxExample-listbox-list"
                id="showAllEntriesComboboxExample-combobox"
                role="combobox"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        className="fd-input-group--control fd-input-group"
                        onClick={[Function]}
                      >
                        <input
                          aria-autocomplete="both"
                          aria-controls="showAllEntriesComboboxExample-listbox-list"
                          aria-labelledby="showAllEntriesComboboxExample-label"
                          autoComplete="nope"
                          className="fd-input fd-input-group__input"
                          id="showAllEntriesComboboxExample-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Enter country"
                          type="text"
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            aria-label="Show country options"
                            className="fd-button fd-button--transparent fd-input-group__button"
                            id="showAllEntriesComboboxExample-combobox-arrow"
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--navigation-down-arrow"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
    />
    <div
      className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
    />
  </div>
</div>
`;

exports[`Storyshots Component API/ComboboxInput Validation State 1`] = `
<div
  className="fd-container"
>
  <div
    className="fd-row"
  >
    <div
      className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
    >
      <div
        className="fd-form-item"
      >
        <label
          aria-required={true}
          className="fd-form-label fd-form-label--required"
          id="errorComboboxExample-label"
        >
          Combobox with error
        </label>
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="errorComboboxExample-listbox-list"
                id="errorComboboxExample-combobox"
                role="combobox"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        className="fd-input-group--control is-error fd-input-group is-error"
                        onClick={[Function]}
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="errorComboboxExample-listbox-list"
                          aria-labelledby="errorComboboxExample-label"
                          autoComplete="off"
                          className="fd-input fd-input-group__input"
                          id="errorComboboxExample-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Enter country"
                          required={true}
                          type="text"
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            className="fd-button fd-button--transparent fd-input-group__button"
                            id="errorComboboxExample-combobox-arrow"
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--navigation-down-arrow"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
    >
      <div
        className="fd-form-item"
      >
        <label
          className="fd-form-label"
          id="warningComboboxExample-label"
        >
          Combobox with warning
        </label>
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="warningComboboxExample-listbox-list"
                id="warningComboboxExample-combobox"
                role="combobox"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        className="fd-input-group--control is-warning fd-input-group is-warning"
                        onClick={[Function]}
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="warningComboboxExample-listbox-list"
                          aria-labelledby="warningComboboxExample-label"
                          autoComplete="off"
                          className="fd-input fd-input-group__input"
                          id="warningComboboxExample-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Enter country"
                          type="text"
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            className="fd-button fd-button--transparent fd-input-group__button"
                            id="warningComboboxExample-combobox-arrow"
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--navigation-down-arrow"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
    >
      <div
        className="fd-form-item"
      >
        <label
          className="fd-form-label"
          id="infoComboboxExample-label"
        >
          Combobox with information
        </label>
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="infoComboboxExample-listbox-list"
                id="infoComboboxExample-combobox"
                role="combobox"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        className="fd-input-group--control is-information fd-input-group is-information"
                        onClick={[Function]}
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="infoComboboxExample-listbox-list"
                          aria-labelledby="infoComboboxExample-label"
                          autoComplete="off"
                          className="fd-input fd-input-group__input"
                          id="infoComboboxExample-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Enter country"
                          type="text"
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            className="fd-button fd-button--transparent fd-input-group__button"
                            id="infoComboboxExample-combobox-arrow"
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--navigation-down-arrow"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-col fd-col--3 fd-col-md--3 fd-col-lg--3 fd-col-xl--3"
    >
      <div
        className="fd-form-item"
      >
        <label
          className="fd-form-label"
          id="successComboboxExample-label"
        >
          Combobox with success
        </label>
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-owns="successComboboxExample-listbox-list"
                id="successComboboxExample-combobox"
                role="combobox"
              >
                <div
                  className="fd-popover"
                  onBlur={[Function]}
                  onFocus={[Function]}
                >
                  <div
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                  >
                    <div
                      className="fd-popover__control"
                    >
                      <div
                        className="fd-input-group--control is-success fd-input-group is-success"
                        onClick={[Function]}
                      >
                        <input
                          aria-autocomplete="list"
                          aria-controls="successComboboxExample-listbox-list"
                          aria-labelledby="successComboboxExample-label"
                          autoComplete="off"
                          className="fd-input fd-input-group__input"
                          id="successComboboxExample-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Enter country"
                          type="text"
                        />
                        <span
                          className="fd-input-group__addon fd-input-group__addon--button"
                        >
                          <button
                            className="fd-button fd-button--transparent fd-input-group__button"
                            id="successComboboxExample-combobox-arrow"
                            onClick={[Function]}
                            tabIndex="-1"
                            type="button"
                          >
                            <i
                              aria-hidden={true}
                              className="sap-icon--navigation-down-arrow"
                              role="img"
                            />
                          </button>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
